# svg2keynote-maclib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  TODO.md  WORK.md  build.sh  chat.sh  init.sh  install.sh  keynote.hpp  link.sh  release.sh  svg2key.cpp  svg2key.mm  test.sh
.github/workflows/: ci.yml  release.yml
_disabled/: mac.txt
_disabled/mac/: svgToKeyRepository.swift
cmake/: version.hpp.in
keynote-protos/: dump-mappings.sh  get-protos.sh
keynote-protos/mapping/: ProtoMapping.cpp
keynote-protos/other/protos/: KNArchives.sos.proto  KNCommandArchives.proto  TSACommandArchives.sos.proto  TSCHArchives.GEN.proto  TSCHArchives.proto  TSCHArchives.sos.proto  TSDCommandArchives.proto  TSTArchives.sos.proto  TSTCommandArchives.proto  TSWPCommandArchives.proto
keynote_lib/: CMakeLists.txt  keynote.cpp
keynote_lib/headers/: keynote.h
keynote_lib/src/svg_to_key/: svg_to_key.cpp  svg_to_key.h
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: test_keynote_to_svg.cpp  test_svg_to_keynote.cpp
tests/unit/: test_keynote_converter.cpp  test_protobuf_helpers.cpp  test_svg_parser.cpp
